...

            <EditText
                android:id="@+id/nazivET"
                android:layout_width="0dp"
                android:layout_height="40dp"
...

            <EditText
                android:id="@+id/porodicaET"
                android:layout_width="0dp"
                android:layout_height="40dp"
...

            <EditText
                android:id="@+id/medicinskoUpozorenjeET"
                android:layout_width="0dp"
                android:layout_height="40dp"
...

            <EditText
                android:id="@+id/jeloET"
                android:layout_width="0dp"
                android:layout_height="40dp"
...

            <ListView
                android:id="@+id/medicinskaKoristLV"
                android:layout_width="0dp"
                android:layout_height="195dp"
...

            <ListView
                android:id="@+id/klimatskiTipLV"
                android:layout_width="0dp"
                android:layout_height="193dp"
...

            <ListView
                android:id="@+id/zemljisniTipLV"
                android:layout_width="0dp"
                android:layout_height="193dp"
...

            <ListView
                android:id="@+id/profilOkusaLV"
                android:layout_width="0dp"
                android:layout_height="193dp"
...

            <ListView
                android:id="@+id/jelaLV"
                android:layout_width="0dp"
                android:layout_height="193dp"
...

            <Button
                android:id="@+id/dodajJeloBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
...
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slikaIV" />

            <Button
                android:id="@+id/dodajBiljkuBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
...

            <Button
                android:id="@+id/uslikajBiljkuBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
...

            <TextView
                android:id="@+id/greskaJedan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/greskaDva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/greskaTri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/greskaCetri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/greskaPet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
